<resources>
    <string name="app_name" translatable="false">ESAN</string>
    <string name="usuario">Usuario</string>
    <string name="clave">Contraseña</string>
    <string name="iniciar_invitado">Iniciar como invitado</string>
    <string name="m_tab_horario">Horario</string>
    <string name="m_tab_cursos">Cursos</string>
    <string name="m_tab_programas">Programas</string>
    <string name="m_tab_secciones">Secciones</string>
    <string name="m_tab_pagos">Pagos</string>
    <string name="m_tab_comedores">Comedores</string>
    <string name="m_tab_puntosreunion">Puntos de Reunión</string>
    <string name="m_tab_salas_estudio">Salas de Estudio</string>
    <string name="m_tab_mas">Más</string>
    <string name="m_t_horario">Horario</string>
    <string name="m_t_cursos">Cursos</string>
    <string name="m_t_programas">Programas</string>
    <string name="m_t_secciones">Secciones</string>
    <string name="m_t_pagos">Pagos</string>
    <string name="m_t_comedores">Comedores</string>
    <string name="m_t_puntosreunion">P. Reunión</string>
    <string name="m_t_salas_estudio">S. Estudio</string>
    <string name="m_t_mas">Más</string>
    <string name="confirmar">Confirmar?</string>
    <string name="error">Error!</string>
    <string name="exito">Éxito!</string>
    <string name="error_clave_vacio">Debe ingresar una contraseña.</string>
    <string name="error_usuario_vacio">Debe ingresar un usuario.</string>
    <string name="error_no_internet">No hay conexión a Internet.</string>
    <string name="advertencia_nosesiones">No se encuentran sesiones programadas</string>
    <string name="error_respuesta_server">Error en la respuesta del servidor, vuelva a intentarlo en unos minutos
    </string>
    <string name="error_no_conexion">Error en la conexión con el servidor, vuelva a intentarlo en unos minutos.</string>
    <string name="error_login_uno">Usuario y/o contraseña son incorrectos.</string>
    <string name="error_encriptar">No se puede encriptar la información.</string>
    <string name="error_desencriptar">No se puede desencriptar la información.</string>
    <string name="advertencia_eliminar_alumno_grupo">No se puede eliminar el alumno del grupo.</string>
    <string name="advertencia_no_registro_encuesta">No se puede registrar la encuesta, vuelva a intentarlo más tarde
    </string>
    <string name="error_login_tres">Inconsistencia en la información.</string>
    <string name="mensaje_encuesta_completada">Encuesta(s) completada(s)</string>
    <string name="error_login_huella">No podrá acceder con su Huella, hasta que cierre la aplicación por completo
    </string>
    <string name="exito_elimino_grupo">Se eliminó el grupo</string>
    <string name="exito_alumno_eliminado">Alumno eliminado</string>
    <string name="advertencia_nocargaacademica">No cuenta con carga académica, para la fecha seleccionada</string>
    <string name="advertencia_nocuenta_conmensajes">No cuenta con mensajes</string>
    <string name="error_no_marco_asistencia">No se pudo registrar su asistencia</string>
    <string name="error_no_marco_asistencia_alumnos">No se pudo registrar la asistencia de los alumnos</string>
    <string name="info_si_asistencia_registrada">Asistencia registrada</string>
    <string name="error_sensores_ra">No cuenta con los sensores adecuados para esta funcionalidad</string>
    <string name="error_permiso_camara">Debe permitir el uso de la Cámara de su dispositivo</string>
    <string name="error_permiso_gps">Debe permitir el uso del GPS de su dispositivo</string>
    <string name="advertencia_no_existe_menu">No existe menú para esta semana</string>
    <string name="advertencia_no_agregar_alumnos_grupo">No se agregó al alumno en el grupo.</string>
    <string name="advertencia_no_eliminar_alumnos_grupo">No se eliminar al alumno en el grupo.</string>
    <string name="advertencia_maximo_alumnos_grupo">Superó el máximo permitido de participantes por grupo.</string>
    <string name="info_no_alumnos_sin_grupo">No existen alumnos sin grupo.</string>
    <string name="info_noalumnosmatriculados">No existen alumnos matriculados</string>
    <string name="info_seleccionahoras">Por lo menos debe seleccionar una hora para continuar</string>
    <string name="codigo">Código</string>
    <string name="correo">Correo</string>
    <string name="enviar_correo">Enviar Correo</string>
    <string name="elegir_facultar">Seleccione facultad:</string>
    <string name="elegir_perfil">Seleccione su perfil:</string>
    <string name="consultar_">Consultar:</string>
    <string name="info_seleccionesclientecorreo">Seleccione su cliente de correo</string>
    <string name="no_existe_resultado_encuesta">Aún no existe resultado de encuestas</string>
    <string name="format_paginacion" translatable="false">(%1$d/%2$d)</string>
    <string name="semana">Semana</string>
    <string name="semana_actual">Semana Actual</string>
    <string name="cargando_puntos_seguidos">Cargando &#8230;</string>
    <string name="asistencia">Asistencia</string>
    <string name="tardanza">Tardanza</string>
    <string name="falta">Falta</string>
    <string name="retirado">Retirado</string>
    <string name="asistencia_cant_porc">Asistencias</string>
    <string name="tardanza_cant_porc">Tardanzas</string>
    <string name="falta_cant_porc">Faltas</string>
    <string name="hoy">Hoy</string>
    <string name="error_horario_no">No existe horario para esta semana</string>
    <string name="error_curso_no">No existen cursos programados</string>
    <string name="error_seccion_no">No tiene secciones registradas</string>
    <string name="error_programa_no">No tiene programas registrados</string>
    <string name="error_pago_no">No tiene pagos registrados</string>
    <string name="sesiones">Sesiones</string>
    <string name="sesiones_">Sesiones: %.2f</string>
    <string name="concepto">Concepto</string>
    <string name="monto">Monto</string>
    <string name="vencimiento">Vencimiento</string>
    <string name="matricula_">Matrícula %1$s</string>
    <string name="recibopago">Recibo de Pago</string>
    <string name="carga_meses_uno">Enero - %1$s, %2$s</string>
    <string name="carga_meses_dos" translatable="false">%1$s, %2$s</string>
    <string name="mensaje">Mensaje</string>
    <string name="mensajes">Notificaciones</string>
    <string name="mensajes_detalle">Mensajes y avisos</string>
    <string name="ra">Realidad Aumentada</string>
    <string name="ra_detalle">Puntos importantes de ESAN</string>
    <string name="comedor_detalle">Comedores de ESAN</string>
    <string name="link_interes">Links de Interés</string>
    <string name="link_interes_detalle">Links importantes de ESAN</string>
    <string name="configuracion">Configuración</string>
    <string name="configuracion_detalle">Huella digital</string>
    <string name="huella_digital">Huella Digital</string>
    <string name="carga_academica">Carga Académica</string>
    <string name="carga_academica_detalle">Académica y extraordinaria</string>
    <string name="malla_curricular">Malla Curricular</string>
    <string name="malla_curricular_detalle">Mi avance curricular</string>
    <string name="tomar_asistencia">Tomar Asistencia</string>
    <string name="charlotte" translatable="false">Charlotte</string>
    <string name="delisabores" translatable="false">Deli Sabores</string>
    <string name="invitado">Invitado</string>
    <string name="alumnopre">Alumno Pregrado</string>
    <string name="alumnopos">Alumno Posgrado</string>
    <string name="pregrado_titulo">Pregrado</string>
    <string name="posgrado_titulo">Posgrado</string>
    <string name="alumno">Alumno</string>
    <string name="alumnos">Alumnos</string>
    <string name="profesor">Docente</string>
    <string name="encuestar">Encuestar</string>
    <string name="encuesta">Encuesta</string>
    <string name="respuesta">Respuesta</string>
    <string name="curso">Curso</string>
    <string name="promedio_final">Promedio Final</string>
    <string name="cursos">Cursos</string>
    <string name="ver_lista">Ver Lista</string>
    <string name="modulo_">Módulo %1$d</string>
    <string name="error_intentelo_mas_tarde">Error intentelo más tarde</string>
    <string name="error_ingreso">Ingrese nuevamente a la aplicación</string>
    <string name="error_valores">No se encontró la información correcta</string>
    <string name="advertencia_no_informacion">No se encontró información</string>
    <string name="advertencia_completar_asistencia">Debe completar toda la lista de asistencias antes de enviar</string>
    <string name="advertencia_completar_encuesta">Debe contestar todas las preguntas para poder enviar la encuesta
    </string>
    <string name="advertencia_no_enviar">No puede enviar en este momento</string>
    <string name="mensaje_confirmar_asistencia">%1$s\nSección: %2$s\nAsistencias: %3$d\nTardanzas: %4$d\nFaltas: %5$d
    </string>
    <string name="carne">Carné</string>
    <string name="carne_virtual">Carné Virtual</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="curso_">Curso:</string>
    <string name="aula_">Aula:</string>
    <string name="profesor_">Profesor:</string>
    <string name="sesion_n_">Sesión Nº: %1$s</string>
    <string name="seccion_">Sección: %1$s</string>
    <string name="asistencia_tomada">Asistencia tomada</string>
    <string name="asistencia_notomada">No tomó asistencia</string>
    <string name="asistencia_tomar">Tomar Asistencia</string>
    <string name="asistencia_modificar">Modificar Asistencia</string>
    <string name="asistencias_postgrado_curso">Asistencias\n%1$d (%2$.1f%%)</string>
    <string name="tardanzas_postgrado_curso">Tardanzas\n%1$d (%2$.1f%%)</string>
    <string name="faltas_postgrado_curso">Faltas\n%1$d (%2$.1f%%)</string>
    <string name="error_no_asistencia">No se puede enviar la asistencia</string>
    <string name="preguntar_reg_asistencia">¿Desea registrar su asistencia a %1$s?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="ok" translatable="false">OK</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="programa">Programa</string>
    <string name="tipo_grupo">Tipo Grupo</string>
    <string name="error_permiso_opcion">No tiene permiso para esta opción</string>
    <string name="ra_descripcion" translatable="false">La Realidad Aumentada, a partir de ahora RA, es una tecnología
        que superpone a una imagen real obtenida a través de una pantalla imágenes, modelos 3D u otro tipo de
        informaciones generados por ordenador\u00B9.\n\nPara poder disfrutar de esta nueva funcionalidad en la
        aplicación de ESAN, tu smartphone debe contar los siguientes sensores: \u0022GPS\u0022,
        \u0022Aceler\u00F3metro\u0022 y \u0022Br\u00FAjula\u0022. Los cuales son indispensables para esta funci\u00F3n.
    </string>
    <string name="ra_referencia" translatable="false">\u00B9Espinosa, C. P. (2015). REALIDAD AUMENTADA Y EDUCACIÓN:
        ANÁLISIS DE EXPERIENCIAS PRÁCTICAS. Pixel&#8211;Bit, Revista De Medios Y Educacion, (46), 187&#8211;203.
        doi:10.12795/pixelbit.2015.i46.12
    </string>
    <string name="ra_no_mostrar">No volver a mostrar</string>
    <string name="prereserva_efectuada_title">Pre-reserva Efectuada</string>
    <string name="solicitante_text">Solicitante:</string>
    <string name="horas_text">Horas:</string>
    <string name="sin_confirmar_text">Sin confirmar</string>
    <string name="fecha_text">Fecha:</string>
    <string name="estado_text">Estado:</string>
    <string name="cubiculo_text">Sala de estudio:</string>
    <string name="ubicacion_text">Ubicación:</string>
    <string name="volver_menu_principal_button">Volver al menú principal</string>
    <string name="ver_ubicacion_en_mapa">Ver ubicación en mapa</string>
</resources>